AC_INIT(README)
AC_PREREQ(2.59)

AC_CANONICAL_HOST

AC_CONFIG_SRCDIR(src)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(vcachefs, 0.1)

AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AC_HEADER_STDC

AM_PROG_LIBTOOL

GLIB_REQUIRED=2.9.0

PKG_CHECK_MODULES(VCACHEFS, 
		  glib-2.0 >= $GLIB_REQUIRED 
		  fuse )
AC_SUBST(VCACHEFS_CFLAGS)
AC_SUBST(VCACHEFS_LIBS)

AC_OUTPUT([
Makefile
src/Makefile
])

